main: add german properly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="header-content">
         <h1>Michel Hotel Sonnenhof</h1>
         <p>A Lovely Hotel in the Heart of the City</p>
-        <a href="#" class="btn">Book Now</a>
+        <a href="#" class="btn">Jetzt buchen</a>
       </div>
     </header>
 
